fix: fix issue with the scrollbars sometimes using default browser styling

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,6 +13,17 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  ::-webkit-scrollbar {
+    @apply w-2.5 h-2.5;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-border border border-transparent border-solid bg-clip-padding;
+  }
 }
 
 code {
